force-app/main/default/objects/NCMT_Project_Markup__c/NCMT_Project_Markup__c.object-meta.xml
<CustomObject>
    <label>NCMT Project Markup</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Project Markup ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT Project Markups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>