force-app/main/default/objects/NCMT_Project_Markup__c/fields/Art_In_Architecture__c.field-meta.xml
<CustomField>
    <fullName>Art_In_Architecture__c</fullName>
    <formula>Art_In_Architecture_new__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Art In Architecture</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>