force-app/main/default/objects/NCMT_Project_Markup__c/fields/Art_In_Architecture_Markup_Impact__c.field-meta.xml
<CustomField>
    <fullName>Art_In_Architecture_Markup_Impact__c</fullName>
    <formula>IF( RecordType.Name !=&apos;DES O&amp;P Project Markup&apos;, ((ECCA__c  + Construction_Contingency_Markup_Impact__c) * Art_In_Architecture__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Art In Architecture Markup Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>