force-app/main/default/objects/NCMT_Project_Markup__c/fields/Art_In_Architecture_new__c.field-meta.xml
<CustomField>
    <fullName>Art_In_Architecture_new__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Art-In-Architecture</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>