force-app/main/default/objects/NCMT_Project_Markup__c/fields/Bid_Factor__c.field-meta.xml
<CustomField>
    <fullName>Bid_Factor__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bid Factor %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>