force-app/main/default/objects/NCMT_Project_Markup__c/fields/Bid_Factor_Impact__c.field-meta.xml
<CustomField>
    <fullName>Bid_Factor_Impact__c</fullName>
    <formula>IF( RecordType.Name ==&apos;DES O&amp;P Project Markup&apos;, ((Total_Cost_w_Subcon_Markups__c + Total_Cost_w_o_SubCon_Markups__c) * Bid_Factor__c ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid Factor Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>