force-app/main/default/objects/NCMT_Project_Markup__c/fields/CECCA__c.field-meta.xml
<CustomField>
    <fullName>CECCA__c</fullName>
    <formula>IF(Gross_Receipt_State_Construction__c &gt;0, (( Gross_Receipt_State_Construction__c +1)* Sub_Total_Lessor__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal - Special tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>