force-app/main/default/objects/NCMT_Project_Markup__c/fields/CMc__c.field-meta.xml
<CustomField>
    <fullName>CMc__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CMc</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>