force-app/main/default/objects/NCMT_Project_Markup__c/fields/CMC_Impact__c.field-meta.xml
<CustomField>
    <fullName>CMC_Impact__c</fullName>
    <formula>Subtotal_OS_Self__c * CMc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CMC Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>