force-app/main/default/objects/NCMT_Project_Markup__c/fields/Construction_Contingency__c.field-meta.xml
<CustomField>
    <fullName>Construction_Contingency__c</fullName>
    <formula>Construction_Contingency_new__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Construction Contingency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>