force-app/main/default/objects/NCMT_Project_Markup__c/fields/Construction_Contingency_Markup_Impact__c.field-meta.xml
<CustomField>
    <fullName>Construction_Contingency_Markup_Impact__c</fullName>
    <formula>ECCA__c * Construction_Contingency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Construction Contingency Markup Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>