force-app/main/default/objects/NCMT_Project_Markup__c/fields/Construction_Contingency_new__c.field-meta.xml
<CustomField>
    <fullName>Construction_Contingency_new__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Construction Contingency</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>