force-app/main/default/objects/NCMT_Project_Markup__c/fields/Construction_Cx__c.field-meta.xml
<CustomField>
    <fullName>Construction_Cx__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Construction Cx</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>