force-app/main/default/objects/NCMT_Project_Markup__c/fields/Design_and_Site_Contingency__c.field-meta.xml
<CustomField>
    <fullName>Design_and_Site_Contingency__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Design and Site Contingency</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>