force-app/main/default/objects/NCMT_Project_Markup__c/fields/Design_Phase_CM__c.field-meta.xml
<CustomField>
    <fullName>Design_Phase_CM__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Design Phase CM</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>