force-app/main/default/objects/NCMT_Project_Markup__c/fields/Developer_Fee__c.field-meta.xml
<CustomField>
    <fullName>Developer_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Developer Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>