force-app/main/default/objects/NCMT_Project_Markup__c/fields/Developer_Fee_Impact__c.field-meta.xml
<CustomField>
    <fullName>Developer_Fee_Impact__c</fullName>
    <description>Developer fee % of total</description>
    <label>Developer Fee Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>