force-app/main/default/objects/NCMT_Project_Markup__c/fields/Developer_Professional_Services_Impact__c.field-meta.xml
<CustomField>
    <fullName>Developer_Professional_Services_Impact__c</fullName>
    <label>Developer Professional Services Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>