force-app/main/default/objects/NCMT_Project_Markup__c/fields/ECC__c.field-meta.xml
<CustomField>
    <fullName>ECC__c</fullName>
    <formula>IF( RecordType.Name ==&apos;DES O&amp;P Project Markup&apos;,( ECCA__c  * (1+ Construction_Contingency__c )),((( ECCA__c  * (1+ Construction_Contingency__c ))* (1+ Art_In_Architecture__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>