force-app/main/default/objects/NCMT_Project_Markup__c/fields/ECCA__c.field-meta.xml
<CustomField>
    <fullName>ECCA__c</fullName>
    <formula>IF( RecordType.Name ==&apos;DES O&amp;P Project Markup&apos;, (( SubTotal_BidFactor__c ) * (1+ Market_Escalation__c)),(Total_CECCA__c * (1+ Market_Escalation__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECCA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>