force-app/main/default/objects/NCMT_Project_Markup__c/fields/EDRC_Estimated_Design_and_Review_Cost__c.field-meta.xml
<CustomField>
    <fullName>EDRC_Estimated_Design_and_Review_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>EDRC</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>