force-app/main/default/objects/NCMT_Project_Markup__c/fields/EDRC_Impact__c.field-meta.xml
<CustomField>
    <fullName>EDRC_Impact__c</fullName>
    <description>EDRC % of total</description>
    <label>EDRC Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>