force-app/main/default/objects/NCMT_Project_Markup__c/fields/EMIC_Estimated_Management_Inspection_Co__c.field-meta.xml
<CustomField>
    <fullName>EMIC_Estimated_Management_Inspection_Co__c</fullName>
    <defaultValue>0</defaultValue>
    <label>EMIC</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>