force-app/main/default/objects/NCMT_Project_Markup__c/fields/EMIC_Impact__c.field-meta.xml
<CustomField>
    <fullName>EMIC_Impact__c</fullName>
    <description>EMIC % of total</description>
    <label>EMIC Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>