force-app/main/default/objects/NCMT_Project_Markup__c/fields/EMIC_Input_Type__c.field-meta.xml
<CustomField>
    <fullName>EMIC_Input_Type__c</fullName>
    <inlineHelpText>For EMIC, User Input Type Either Percent or Dollar Amount</inlineHelpText>
    <label>EMIC Input Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
                <default>true</default>
                <label>Percent(%)</label>
            </value>
            <value>
                <fullName>Dollar Amount</fullName>
                <label>Dollar Amount($)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>