force-app/main/default/objects/NCMT_Project_Markup__c/fields/ETPC__c.field-meta.xml
<CustomField>
    <fullName>ETPC__c</fullName>
    <formula>(ECC__c * (1+EDRC_Estimated_Design_and_Review_Cost__c + EMIC_Estimated_Management_Inspection_Co__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETPC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>