force-app/main/default/objects/NCMT_Project_Markup__c/fields/Exclude_Construction_Contingency__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Construction_Contingency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Construction Contingency</label>
    <type>Checkbox</type>
</CustomField>