force-app/main/default/objects/NCMT_Project_Markup__c/fields/Gross_Receipt_State_Construction__c.field-meta.xml
<CustomField>
    <fullName>Gross_Receipt_State_Construction__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Gross Receipt/State Cons. Tax</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>