force-app/main/default/objects/NCMT_Project_Markup__c/fields/Gross_Receipts_Impact__c.field-meta.xml
<CustomField>
    <fullName>Gross_Receipts_Impact__c</fullName>
    <description>Gross Receipts/State Construction tax % of total</description>
    <label>Gross Receipts Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>