force-app/main/default/objects/NCMT_Project_Markup__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <defaultValue>0.02</defaultValue>
    <label>Insurance</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>