force-app/main/default/objects/NCMT_Project_Markup__c/fields/Labor_Project_Premium_Markup__c.field-meta.xml
<CustomField>
    <fullName>Labor_Project_Premium_Markup__c</fullName>
    <label>Labor Project Premium Markup</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>