force-app/main/default/objects/NCMT_Project_Markup__c/fields/Lessor_Fee_impact__c.field-meta.xml
<CustomField>
    <fullName>Lessor_Fee_impact__c</fullName>
    <description>Lessor Fee % of Total</description>
    <label>Lessor Fee impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>