force-app/main/default/objects/NCMT_Project_Markup__c/fields/Lessor_Professional_Services_Impact__c.field-meta.xml
<CustomField>
    <fullName>Lessor_Professional_Services_Impact__c</fullName>
    <description>Lessor Professional Services % of Total</description>
    <label>Lessor Professional Services Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>