force-app/main/default/objects/NCMT_Project_Markup__c/fields/Market_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Market_Escalation__c</fullName>
    <formula>Project_Name__r.Total_Escalation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Escalation</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>