force-app/main/default/objects/NCMT_Project_Markup__c/fields/Market_Escalation_Impact__c.field-meta.xml
<CustomField>
    <fullName>Market_Escalation_Impact__c</fullName>
    <description>Market Escalation % of total</description>
    <label>Market Escalation Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>