force-app/main/default/objects/NCMT_Project_Markup__c/fields/Market_Escalation_Markup_Impact__c.field-meta.xml
<CustomField>
    <fullName>Market_Escalation_Markup_Impact__c</fullName>
    <formula>IF( RecordType.Name ==&apos;DES O&amp;P Project Markup&apos;,(SubTotal_BidFactor__c * Market_Escalation__c ), (Total_CECCA__c * Market_Escalation__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Escalation Markup Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>