force-app/main/default/objects/NCMT_Project_Markup__c/fields/OS_Work_Commission_Impact__c.field-meta.xml
<CustomField>
    <fullName>OS_Work_Commission_Impact__c</fullName>
    <formula>IF( RecordType.Name !=&apos;DES O&amp;P Project Markup&apos;, SubTotal_with_SubCon__c * Prime_Con_OSWork_Commission__c * (1 + Prime_Con_OSWork_Homeoff_Overhead__c + Prime_Con_OSWork_Jobsite_Overhead__c) * (1 + Prime_Con_OSWork_Profit__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OS Work Commission Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>