force-app/main/default/objects/NCMT_Project_Markup__c/fields/Prime_Con_OSWork_Homeoff_Overhead__c.field-meta.xml
<CustomField>
    <fullName>Prime_Con_OSWork_Homeoff_Overhead__c</fullName>
    <defaultValue>0.04</defaultValue>
    <label>Home-Office Overhead</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>