force-app/main/default/objects/NCMT_Project_Markup__c/fields/Prime_Con_OSWork_Jobsite_Overhead__c.field-meta.xml
<CustomField>
    <fullName>Prime_Con_OSWork_Jobsite_Overhead__c</fullName>
    <defaultValue>0.07</defaultValue>
    <label>Jobsite Overhead (Gen Conditions)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>