force-app/main/default/objects/NCMT_Project_Markup__c/fields/Prime_Con_SelfWork_Commission__c.field-meta.xml
<CustomField>
    <fullName>Prime_Con_SelfWork_Commission__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Commission</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>