force-app/main/default/objects/NCMT_Project_Markup__c/fields/Prime_Con_SelfWork_JobSiteOverhead__c.field-meta.xml
<CustomField>
    <fullName>Prime_Con_SelfWork_JobSiteOverhead__c</fullName>
    <defaultValue>0.07</defaultValue>
    <label>Jobsite Overhead (Gen Conditions)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>