force-app/main/default/objects/NCMT_Project_Markup__c/fields/Prime_Contractor_Markup_Cost__c.field-meta.xml
<CustomField>
    <fullName>Prime_Contractor_Markup_Cost__c</fullName>
    <formula>SubTotal_SelfPerformedWork__c -    SubTotal_w_o_SubCon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prime Contractor Markup Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>