force-app/main/default/objects/NCMT_Project_Markup__c/fields/Pro_Services_Pre_Const_Impact__c.field-meta.xml
<CustomField>
    <fullName>Pro_Services_Pre_Const_Impact__c</fullName>
    <formula>(Subtotal_OS_Self__c * (1+ CMc__c) *  Professional_Services_Fees_Preconst__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pro Services Pre Const. Pmpact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>