force-app/main/default/objects/NCMT_Project_Markup__c/fields/Professional_Services_Fees_Preconst__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services_Fees_Preconst__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prof. Services Fees (Preconst. Phase)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>