force-app/main/default/objects/NCMT_Project_Markup__c/fields/Professional_Services_Lessor_Fee__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services_Lessor_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Professional Services (AE, CM, Comm)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>