force-app/main/default/objects/NCMT_Project_Markup__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCMT Project</label>
    <referenceTo>NCMT_Project__c</referenceTo>
    <relationshipLabel>NCMT Project Markups</relationshipLabel>
    <relationshipName>NCMT_Project_Markups</relationshipName>
    <type>Lookup</type>
</CustomField>