force-app/main/default/objects/NCMT_Project_Markup__c/fields/Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sales Tax</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>