force-app/main/default/objects/NCMT_Project_Markup__c/fields/Self_Work_Bond_Impact__c.field-meta.xml
<CustomField>
    <fullName>Self_Work_Bond_Impact__c</fullName>
    <formula>IF( RecordType.Name !=&apos;DES O&amp;P Project Markup&apos;, (SubTotal_w_o_SubCon__c + Self_Work_Home_Office_Impact__c + Self_Work_Jobsite_Impact__c + Self_Work_Profit_Impact__c + Self_Work_Commission_Impact__c) * Prime_Con_SelfWork_Bond__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Self Work Bond Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>