force-app/main/default/objects/NCMT_Project_Markup__c/fields/Self_Work_Jobsite_Impact__c.field-meta.xml
<CustomField>
    <fullName>Self_Work_Jobsite_Impact__c</fullName>
    <formula>IF( RecordType.Name !=&apos;DES O&amp;P Project Markup&apos;, SubTotal_w_o_SubCon__c * Prime_Con_SelfWork_JobSiteOverhead__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Self Work Jobsite Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>