force-app/main/default/objects/NCMT_Project_Markup__c/fields/Self_Work_Pro_Services_Impact__c.field-meta.xml
<CustomField>
    <fullName>Self_Work_Pro_Services_Impact__c</fullName>
    <formula>IF(RecordType.Name!=&apos;DES O&amp;P Project Markup&apos;, (SubTotal_w_o_SubCon__c + Self_Work_Home_Office_Impact__c + Self_Work_Jobsite_Impact__c + Self_Work_Profit_Impact__c + Self_Work_Commission_Impact__c) * (1 + Prime_Con_SelfWork_Bond__c) * Professional_Services_Fees_SelfWork__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Self Work Pro Services Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>