force-app/main/default/objects/NCMT_Project_Markup__c/fields/Site_and_Design_Cont_Impact__c.field-meta.xml
<CustomField>
    <fullName>Site_and_Design_Cont_Impact__c</fullName>
    <formula>SubTotal__c - (  Total_Cost_w_o_SubCon_Markups__c +  Total_Cost_w_Subcon_Markups__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site and Design Cont. Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>