force-app/main/default/objects/NCMT_Project_Markup__c/fields/Site_Design_Contingency__c.field-meta.xml
<CustomField>
    <fullName>Site_Design_Contingency__c</fullName>
    <formula>Design_and_Site_Contingency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site &amp; Design Contingency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>