force-app/main/default/objects/NCMT_Project_Markup__c/fields/Sub_Total_Labor_w_Subcon__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total_Labor_w_Subcon__c</fullName>
    <formula>Total_Labor_w_SubCon__c * (1+  Labor_Burden_Tax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Total - Labor w. Subcon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>