force-app/main/default/objects/NCMT_Project_Markup__c/fields/Sub_Total_Lessor__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total_Lessor__c</fullName>
    <formula>((SubTotal_Developer__c * (1+ Lessor_Fee__c ))*(1+ Professional_Services_Lessor_Fee__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>