force-app/main/default/objects/NCMT_Project_Markup__c/fields/Subcontractor_Markup_Cost__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_Markup_Cost__c</fullName>
    <formula>SubTotal_Out_SourcedWork__c  -  SubTotal_with_SubCon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subcontractor Markup Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>