force-app/main/default/objects/NCMT_Project_Markup__c/fields/SubTotal__c.field-meta.xml
<CustomField>
    <fullName>SubTotal__c</fullName>
    <formula>SubTotal_with_SubCon__c +  SubTotal_w_o_SubCon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubTotal (w Site and Design Cont.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>