force-app/main/default/objects/NCMT_Project_Markup__c/fields/SubTotal_CMc__c.field-meta.xml
<CustomField>
    <fullName>SubTotal_CMc__c</fullName>
    <formula>(((SubTotal_SelfPerformedWork__c + SubTotal_Out_SourcedWork__c)* (1+ CMc__c))*(1+ Professional_Services_Fees_Preconst__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>