force-app/main/default/objects/NCMT_Project_Markup__c/fields/SubTotal_CMc_f__c.field-meta.xml
<CustomField>
    <fullName>SubTotal_CMc_f__c</fullName>
    <formula>IF( (CMc__c &gt;0 ||  Professional_Services_Fees_Preconst__c &gt;0) ,SubTotal_CMc__c  ,0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubTotal - CMc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>