force-app/main/default/objects/NCMT_Project_Markup__c/fields/SubTotal_Developer__c.field-meta.xml
<CustomField>
    <fullName>SubTotal_Developer__c</fullName>
    <formula>(( SubTotal_CMc__c * (1+ Developer_Fee__c ))*(1+ Professional_Services_Developer_Fee__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>