force-app/main/default/objects/NCMT_Project_Markup__c/fields/SubTotal_Developer_f__c.field-meta.xml
<CustomField>
    <fullName>SubTotal_Developer_f__c</fullName>
    <formula>IF((Developer_Fee__c &gt; 0|| Professional_Services_Developer_Fee__c &gt;0), SubTotal_Developer__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubTotal - Developer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>